bugfix: avatar spacing in group

--- a/packages/app/styles/globals.less
+++ b/packages/app/styles/globals.less
@@ -242,6 +242,10 @@ textarea {
   border: 2px solid @primary-color;
 }
 
+.ant-page-header-heading .ant-avatar {
+  margin-right: unset;
+}
+
 .hover\:component-highlight {
   transition: background 0.3s ease-in-out;
   &:hover {
